<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/main_background" />

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:padding="10dp"
        android:background="@drawable/shape_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAuthorizationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:text="@string/authorization" />

        <EditText
            android:id="@+id/editTextAuthorizationLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_login_edit_text"
            android:paddingHorizontal="8dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/login" />

        <EditText
            android:id="@+id/editTextAuthorizationPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_login_edit_text"
            android:paddingHorizontal="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/buttonAuthorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/textViewAuthorizationInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAuthorizationCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@drawable/shape_login"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/creator" />
</androidx.constraintlayout.widget.ConstraintLayout>