<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerDialog"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDialogMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/spinner"
            app:layout_constraintBottom_toBottomOf="@id/spinner"
            app:layout_constraintEnd_toStartOf="@id/spinner" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/containerDialog"
            app:layout_constraintStart_toEndOf="@id/textViewDialogMonth"/>

        <TextView
            android:id="@+id/textViewDialogDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/editTextDialogDay"
            app:layout_constraintBottom_toBottomOf="@+id/editTextDialogDay"
            app:layout_constraintEnd_toEndOf="@id/textViewDialogMonth"/>

        <EditText
            android:id="@+id/editTextDialogDay"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginStart="10dp"
            android:hint="@string/day_hint"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            app:layout_constraintStart_toEndOf="@id/textViewDialogMonth"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonChangeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/containerDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/button_change" />

    <TextView
        android:id="@+id/textViewDialogInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonChangeDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/red"
        android:layout_marginTop="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>